welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:7: error: illegal start of simple expression
	else if ((a==b) || (a==c && !) || (b==c))
                                     ^greenTicket:15: error: ')' expected but '}' found.
}
^